--- a/html/test.html
+++ b/html/test.html
@@ -10,7 +10,7 @@
   <p>私は中学時代にサッカーを始めました。<br>
     現在はサッカーのコーチとして活動をして、趣味のサッカーを楽しんでいます。
   </p>
-    <img src="../images/sample.png" alt="趣味の画像" width="300" height="200">
+    <img src="../images/sample.jpg" alt="趣味の画像" width="300" height="200">
     <a href="https://x.com/samuraijuku">私のプロフィールはこちら</a>
     
     
